examples/sdk/native/nclink_shim.h

/** 五个语言设备端示例共用的设备模型（JSON 文本；静态存储，不用释放）。 */
NCLSHIM_API const char *nclshim_device_model(void);
/** 库版本号（编译期常量，不用释放）。 */
NCLSHIM_API const char *nclshim_version(void);
/** 错误码文本。 */
NCLSHIM_API const char *nclshim_err_name(int code);
/** 释放垫片返还的所有权内存（char* / JSON / 模型）。 */
NCLSHIM_API void nclshim_free(void *ptr);
/** 安装根目录（conf/、bin/、log/ 都在它下面）。 */
NCLSHIM_API void nclshim_env_set_root(const char *root);
NCLSHIM_API const char *nclshim_env_root(void);
/** 日志：NULL/空目录 = 默认的 <root>/log。返回 1 成功。 */
NCLSHIM_API int nclshim_log_init(const char *dir);
NCLSHIM_API void nclshim_log_shutdown(void);
/** 0=Debug 1=Info 2=Warn 3=Error 4=Fatal（见 ncl_log_level）。 */
NCLSHIM_API void nclshim_log_set_level(int level);
NCLSHIM_API void nclshim_log_set_console(int enabled);
/** 解析 JSON 文本；失败返回 NULL（不抛异常）。 */
NCLSHIM_API const void *nclshim_json_parse(const char *text);
NCLSHIM_API const void *nclshim_json_clone(const void *json);
NCLSHIM_API void nclshim_json_free(const void *json);
/** 紧凑 JSON 文本（malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_json_write(const void *json);
/** ncl_json_type：0 null / 1 bool / 2 number / 3 string / 4 array / 5 object。 */
NCLSHIM_API int nclshim_json_type(const void *json);
NCLSHIM_API int nclshim_json_is_null(const void *json);
NCLSHIM_API int nclshim_json_as_int(const void *json, long long *out);
NCLSHIM_API int nclshim_json_as_double(const void *json, double *out);
NCLSHIM_API int nclshim_json_as_bool(const void *json, int *out);
/** 字符串值（借用；不是字符串返回 NULL）。 */
NCLSHIM_API const char *nclshim_json_string(const void *json);
/** 文本形式：数字原样、字符串去引号（malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_json_text(const void *json);
/** 数组元素个数 / 对象成员个数。 */
NCLSHIM_API int nclshim_json_count(const void *json);
NCLSHIM_API const void *nclshim_json_array_get(const void *json, int index);
NCLSHIM_API const void *nclshim_json_object_value_at(const void *json, int index);
NCLSHIM_API const char *nclshim_json_object_key_at(const void *json, int index);
NCLSHIM_API const void *nclshim_json_object_get(const void *json, const char *key);
/** 解析模型文档（NULL 或空串 = 库内置默认模型）。调用方用 nclshim_model_free。 */
NCLSHIM_API const void *nclshim_model_parse(const char *json);
NCLSHIM_API void nclshim_model_free(const void *root);
/** 序列化整棵树（malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_model_write(const void *root);
NCLSHIM_API const void *nclshim_model_find_by_id(const void *root, const char *id);
NCLSHIM_API int nclshim_node_type(const void *node);
NCLSHIM_API const char *nclshim_node_type_name(const void *node);
NCLSHIM_API const char *nclshim_node_name(const void *node);
NCLSHIM_API const char *nclshim_node_id(const void *node);
NCLSHIM_API const char *nclshim_node_path(const void *node);
NCLSHIM_API const char *nclshim_node_description(const void *node);
NCLSHIM_API const char *nclshim_node_number(const void *node);
NCLSHIM_API const char *nclshim_node_data_type(const void *node);
NCLSHIM_API const char *nclshim_node_value_type(const void *node);
NCLSHIM_API const char *nclshim_node_mapping(const void *node);
NCLSHIM_API const char *nclshim_node_source(const void *node);
NCLSHIM_API const char *nclshim_node_version(const void *node);
NCLSHIM_API const char *nclshim_node_guid(const void *node);
NCLSHIM_API int nclshim_node_settable(const void *node);
/** 数据项的当前值（借用；模型里没有值就是 NULL）。 */
NCLSHIM_API const void *nclshim_node_value(const void *node);
/** 采样通道：周期（毫秒）与采样项。 */
NCLSHIM_API int nclshim_node_is_sample_channel(const void *node);
NCLSHIM_API long long nclshim_node_sample_interval(const void *node);
NCLSHIM_API long long nclshim_node_upload_interval(const void *node);
NCLSHIM_API int nclshim_node_sample_item_count(const void *node);
/** 采样项声明的路径（malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_node_sample_item_path(const void *node, int index);
/** 子节点遍历：kind 1=device 2=component 3=config 0=dataItem。 */
NCLSHIM_API int nclshim_node_count(const void *node, int kind);
NCLSHIM_API const void *nclshim_node_at(const void *node, int kind, int index);
/**
 * 解析一条报文：topic 决定形态（Query/Request/...、Sample/<sn>/<通道>、
 * Event/<sn> ...），payload 是原始 MQTT 报文（不必 NUL 结尾，用长度）。失败返回
 * NULL。返回的报文**归调用方所有**，用 nclshim_message_free() 释放。
 *
 * 用途：托管侧自己拿到的 MQTT 报文（离线回放、日志、文件里存下来的样本）也能按
 * 库的规则解码，不必再手写一遍 JSON。
 */
NCLSHIM_API const void *nclshim_message_parse(const char *topic,
                                              const void *payload,
                                              int payload_len);
/** 释放 nclshim_message_parse() 返回的报文（借用的句柄不要传进来）。 */
NCLSHIM_API void nclshim_message_free(const void *msg);
/** 整条报文的 JSON 文本（malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_message_write(const void *msg);
NCLSHIM_API int nclshim_message_type(const void *msg);
/** 采样报文：行数 = 数据最多的那一列的点数。 */
NCLSHIM_API int nclshim_sample_rows(const void *msg);
/** 采样报文：列数（= 表头项数）。 */
NCLSHIM_API int nclshim_sample_columns(const void *msg);
NCLSHIM_API int nclshim_sample_is_complete(const void *msg);
NCLSHIM_API const char *nclshim_sample_id(const void *msg);
NCLSHIM_API const char *nclshim_sample_begin_time(const void *msg);
NCLSHIM_API long long nclshim_sample_interval(const void *msg);
NCLSHIM_API long long nclshim_sample_upload_interval(const void *msg);
/** 表头第 col 项（借用）。 */
NCLSHIM_API const char *nclshim_sample_path(const void *msg, int col);